tests/paczka1/fuzzy1/74891043.err
Error in line 11: 4DoYOfe A549 97,1
Error in line 24: YXfo1Ejl S185 67,2
Error in line 34: cG01wwL S185 51,6
Error in line 36: cG01wwL S882 15,1
